--- a/contiki-2.4/examples/webserver-ipv6-raven/Makefile.webserver
+++ b/contiki-2.4/examples/webserver-ipv6-raven/Makefile.webserver
@@ -1,7 +1,7 @@
 
 all: webserver6
 
-APPS=raven-webserver raven-lcd-interface raven-relay-switch
+APPS=raven-webserver raven-lcd-interface raven-relay-switch raven-pushbutton
 TARGET=avr-raven
 UIP_CONF_IPV6=1
 #RF230BB=1             //Use radio driver that communicates with the core MAC layer. Still Experimental!
